<resources>
    <string name="app_name">Android-Caching</string>


    <!-- Used for opening and closing the drawer. DO NOT CHANGE!!! -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Set Values for the case, that no User is logged in -->
    <string name="no_user_username">Username</string>
    <string name="no_user_aliasname">e-Mail</string>
    <string name="no_user_score">0</string>


    <!-- Messages for Help Displays -->
    <string name="help_in_profile">
        Manage your Account, or play offline. \n
        In login-screen you may only enter your information for the desired action.</string>
    <string name="help_in_play_random">
        Chooses a random challenge from your local challenges for you to tackle\n
        or\nYou landed here because you selected a specific challenge from your local stash</string>
    <string name="help_in_local_challanges">
        See all your downloaded challenges nicely listed.\nAnd you can even get new ones</string>
    <string name="help_in_browse_challanges">
        Get new and exciting challenges, uploaded to our database by other users</string>
    <string name="help_in_settings">
        Do I really need to explain what "Settings" are?!</string>


    <!-- Toast messages for login screen -->
    <string name="missing_pw">Please enter a password</string>
    <string name="missing_username">Please enter a username</string>
    <string name="unequal_pw">Passwords did not match</string>
    <string name="no_entry_was_made">Please enter some data…</string>
    <string name="no_internet_connection">No connection to Internet</string>
    <string name="unresolvaable_error">An error occurred…</string>


    <!-- Login Screen Labels -->
    <string name="login_label">LOGIN OR REGISTER</string>
    <string name="logout_label">LOGOUT</string>


    <!-- Labels for NavigationDrawer -->
    <string name="nav_drawer_profile"   >My Profile</string>
    <string name="nav_drawer_play"      >Play Random Local</string>
    <string name="nav_drawer_locals"    >Local Challenges</string>
    <string name="nav_drawer_browse"    >Browse Challenges</string> <!-- not needed any longer -->
    <string name="nav_drawer_settings"  >Settings</string>
    <string name="nav_drawer_sync"      >Sync. with DB</string>


    <!-- displayed Error messages -->
    <string name="wrong_pw_toast">Wrong password!</string>
    <string name="check_connection_toast">Check your Internet-connection!</string>


    <!-- Values for the login dialogue -->
    <string name="login_headline">Login</string>
    <string name="login_email_hint">eMail Address</string>
    <string name="login_password_hint">Password</string>
    <string name="register_headline">Register</string>
    <string name="register_email_hint">eMail Address</string>
    <string name="register_username_hint">Username</string>
    <string name="register_password_hint">Password</string>
    <string name="register_repeat_password_hint">repeat Password</string>


    <!-- AndroidCaching preference Keys -->
    <string name="preference_file_key">ADCA2018</string>

    <string name="onlyUseWlan">WlanUsage</string>
    <string name="ac_username">userName</string>
    <string name="ac_aliasname">userMail</string>
    <string name="ac_score">userScore</string>
    <string name="ac_user_present">AC_User_is_present</string>
    <string name="ac_gps_perm_granted">GPS_Granted</string>
    <string name="last_active_fragment">last_Fragment</string>


    <!-- Local challanges dialouges -->
    <string name="clicked_empty_challange_message">
        You clicked on an empty slot. How do you want to get a challenge here?
    </string>
    <string name="selected_existing_challange">
        Do you want to remove this challenge?
    </string>
    <string name="download_challange_label">Download</string>
    <string name="create_own_challange_label">Make own</string>
    <string name="cancel_operation">Cancel</string>


    <!-- Filenames for internal image files -->
    <string name="recently_captured">new_challange</string>
    <string name="pic_ch1">Challange_1.jpg</string>
    <string name="pic_ch2">Challange_2.jpg</string>
    <string name="pic_ch3">Challange_3.jpg</string>
    <string name="pic_ch4">Challange_4.jpg</string>
    <string name="pic_ch5">Challange_5.jpg</string>
    <string name="pic_ch6">Challange_6.jpg</string>
    <string name="pic_ch7">Challange_7.jpg</string>
    <string name="pic_ch8">Challange_8.jpg</string>
    <string name="pic_ch9">Challange_9.jpg</string>
    <string name="pic_ch10">Challange_10.jpg</string>
    <string name="pic_ch11">Challange_11.jpg</string>
    <string name="pic_ch12">Challange_12.jpg</string>
</resources>
