<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/nav_drawer_profile" />
        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/ic_play_arrow"
            android:title="@string/nav_drawer_play" />
        <item
            android:id="@+id/nav_list_challanges"
            android:icon="@drawable/ic_list_challanges"
            android:title="@string/nav_drawer_locals" />
        <item
            android:id="@+id/nav_browse_challanges"
            android:icon="@drawable/ic_globe"
            android:title="@string/nav_drawer_browse" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_drawer_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_update_with_DB"
                android:icon="@drawable/ic_refresh"
                android:title="@string/nav_drawer_sync" />
        </menu>
    </item>

</menu>